@@ -1,3 +1,7 @@
+2016-07-01  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* chopstx.c (chopstx_setpriority): Change the API.
+
 2016-06-30  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* example-cdc/usb-cdc.c (tty_recv, tty_main): Follow the change of
